--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -779,7 +779,7 @@
           }
           .anchor {
             position: absolute;
-            z-index: 200!important;
+            // z-index: 200!important;
             top: 0;
             right: 0;
             left: 0;
